# test

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/example/nativecodec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  looper.cpp  looper.h  native-lib.cpp
app/src/main/java/com/example/nativecodec/: MainActivity.java  MyGLSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/nativecodec/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
